--- a/catch-fd.cabal
+++ b/catch-fd.cabal
@@ -1,6 +1,6 @@
 name:                catch-fd
-version:             0.1.0.1
-cabal-version:       >= 1.6
+version:             0.1.0.2
+cabal-version:       >= 1.10
 synopsis:            MonadThrow and MonadCatch, using functional dependencies
 description:         MonadThrow and MonadCatch, using functional dependencies
 license:             BSD3
@@ -17,6 +17,22 @@ source-repository head
   location: git://github.com/sonyandy/catch-fd.git
 
 library
-  exposed-modules: Control.Monad.Catch 
-  build-depends: base < 6, mtl == 2.1.*, transformers == 0.3.*
+  default-language: Haskell98
+  exposed-modules: Control.Monad.Catch
+  build-depends:
+    base >= 4 && < 5,
+    transformers >= 0.2 && < 0.4,
+    mtl >= 2.0 && < 2.2
+  other-extensions: CPP
+  if impl(ghc >= 7.4)
+    cpp-options: -DLANGUAGE_ConstraintKinds
+    other-extensions: ConstraintKinds
+  if impl(ghc >= 7.2)
+    cpp-options: -DLANGUAGE_DefaultSignatures
+    other-extensions: DefaultSignatures
+  other-extensions:
+    FlexibleInstances
+    FunctionalDependencies
+    MultiParamTypeClasses
+    UndecidableInstances
   ghc-options: -Wall
